examples/compiler_errors/named_field_type_diverges_e467.flx
// expect: compile_error
// expect-error: E467

// A shared field name has different declared types across variants.
//
// Expected: E467 Divergent Field Types Across Variants
//   "Field `id` has inconsistent types across variants of `Item`."

data Item {
    User { id: Int, name: String }
    Product { id: String, title: String }
}

fn main() {
    let u = User { id: 1, name: "Alice" }
    u.id
}
